<resources>
    <string name="app_name">Fruit Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">Basket</string>
    <string name="search_hint">Search for fruit salad combos</string>
    <string name="recommended_combo">Recommended Combo</string>
    <string name="top">Top</string>
    <string name="new_combo">New Combo</string>
    <string name="popular">Popular</string>
    <string name="hottest">Hottest</string>
    <string name="what_fruit_salad_combo_do_you_want_today">What fruit salad combo do you want today?</string>
    <string name="hello_user">Hello %1$s,</string>
    <string name="one_pack_contains">One Pack Contains:</string>
    <string name="item_description">Red Quinoa, Lime, Honey, Blueberries, Strawberries, Mango, Fresh mint.</string>
    <string name="item_description_2">If you are looking for a new fruit salad to eat today, quinoa is the perfect brunch for you. make</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="go_back">Go Back</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="my_basket">My Basket</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_10th_avenue_lekki_lagos_state">10th avenue, Lekki, Lagos State</string>
    <string name="number_we_can_call">Number we can call</string>
    <string name="_09090605708">09090605708</string>
    <string name="pay_on_delivery">Pay on delivery</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="your_order_have_been_taken_and_is_being_attended_to">Your order have been taken and is being attended to</string>
    <string name="track_order">Track order</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="order_is_being_prepared">Order Is Being Prepared</string>
    <string name="order_is_being_delivered">Order Is Being Delivered</string>
    <string name="order_received">Order Received</string>
    <string name="order_taken">Order Taken</string>
    <string name="completed">Completed</string>
    <string name="line">Line</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="card_holders_name">Card Holders Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="complete_order">Complete Order</string>
    <string name="success">Success</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="your_details">Your Details</string>

    <string name="order_id_model">Order ID : %1$s</string>
    <string name="order_address_model">Address: %1$s</string>
    <string name="order_created_model">Created: %1$s</string>
    <string name="order_status_model">Status: %1$s</string>

    <string name="price_model">%1$s AED</string>
    <string name="basket_quantity">Quantity : %1$s</string>
    <string name="cvv">CVV</string>
    <string name="increase_button">Increase Button</string>
    <string name="decrease_button">Decrease Button</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="fruit_hub_logo">Fruit Hub Logo</string>
    <string name="welcome_screen_1">Get The Freshest Fruit Salad Combo</string>
    <string name="welcome_screen_2">We deliver the best and freshest fruit salad in town. Order for a combo today!!!</string>
    <string name="let_s_continue">Let’s Continue</string>
    <string name="what_is_your_details">What is your details?</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="password">Password</string>
    <string name="your_login_details">Your login details?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="_0_aed">0 AED</string>
</resources>