<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/ic_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/ic_orders"
            android:icon="@drawable/ic_history"
            android:title="@string/orders" />
        <item
            android:id="@+id/ic_basket"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/basket" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/ic_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/ic_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout" />
    </group>
</menu>