<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".fragment.SuccessFragment">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/success"
            android:src="@mipmap/ic_success_mark" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:fontFamily="@font/average_sans"
            android:text="@string/congratulations"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/average_sans"
            android:gravity="center"
            android:text="@string/your_order_have_been_taken_and_is_being_attended_to"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/track_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:fontFamily="@font/average_sans"
            android:padding="@dimen/dimen_16"
            android:text="@string/track_order"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dimen_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_shopping_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:fontFamily="@font/average_sans"
            android:padding="@dimen/dimen_16"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dimen_8" />

    </LinearLayout>
</layout>