<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.fruithub.model.Item" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="260dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/primaryColor"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/details_back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_bg"
                        android:drawableStart="@drawable/ic_arrow_back"
                        android:fontFamily="@font/average_sans"
                        android:gravity="center_vertical"
                        android:padding="@dimen/dimen_8"
                        android:text="@string/go_back"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font16" />

                </androidx.appcompat.widget.Toolbar>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_marginBottom="@dimen/dimen_32"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/sym_def_app_icon"
                    app:layout_collapseMode="parallax"
                    app:loadShapeableImage="@{item.image}"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen_8"
                tools:context=".fragment.DetailsFragment">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/details_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average_sans"
                    android:padding="@dimen/dimen_16"
                    android:text="@{item.name}"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/font_30"
                    tools:text="@tools:sample/cities" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_8">

                    <ImageButton
                        android:id="@+id/decrease_q_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/add_bg"
                        android:contentDescription="@string/decrease_button"
                        android:src="@drawable/ic_remove" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/details_quantity"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:fontFamily="@font/average_sans"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/font_20" />

                    <ImageButton
                        android:id="@+id/increase_q_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/add_bg"
                        android:contentDescription="@string/increase_button"
                        android:src="@drawable/ic_add" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/average_sans"
                        android:gravity="end|center"
                        android:paddingStart="@dimen/dimen_32"
                        android:paddingEnd="@dimen/dimen_32"
                        android:text="@{String.format(@string/price_model, String.valueOf(item.price))}"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/font_24"
                        tools:text="@tools:sample/us_zipcodes" />

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:background="?android:attr/listDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/one_pack_contains"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/font_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/details_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:fontFamily="@font/average_sans"
                    android:text="@{item.description}"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/font_18"
                    tools:text="@string/item_description" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:background="?android:attr/listDivider" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:fontFamily="@font/average_sans"
                    android:text="@string/item_description_2"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/font_18" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/dimen_16"
                android:background="@drawable/add_bg"
                android:contentDescription="@string/favourite_button"
                android:src="@drawable/ic_favorite" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_basket_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_weight="1"
                android:fontFamily="@font/average_sans"
                android:padding="@dimen/dimen_16"
                android:text="@string/add_to_basket"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/dimen_16" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>