<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@color/primaryColor"
            android:padding="@dimen/dimen_55"
            android:src="@drawable/auth_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/average_sans"
            android:text="@string/your_login_details"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_16"
            app:boxCornerRadiusTopStart="@dimen/dimen_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/average_sans"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/font16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomStart="@dimen/dimen_16"
            app:boxCornerRadiusTopEnd="@dimen/dimen_16"
            app:layout_constraintEnd_toEndOf="@+id/auth_email"
            app:layout_constraintStart_toStartOf="@+id/auth_email"
            app:layout_constraintTop_toBottomOf="@+id/auth_email"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/average_sans"
                android:inputType="textPassword"
                android:textSize="@dimen/font16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:fontFamily="@font/average_sans"
            android:text="@string/register"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/font_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/auth_password"
            app:layout_constraintTop_toBottomOf="@+id/auth_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_ordering_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/average_sans"
            android:padding="@dimen/dimen_16"
            android:text="@string/start_ordering"
            android:textAllCaps="false"
            android:textSize="@dimen/font16"
            app:cornerRadius="@dimen/dimen_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>